v0.9.0
- Static Middleware

v0.8.0
- Static Middleware

v0.7.0
- plus skip pour être sur de tout avoir

v0.6.2
- ajout log simple

v0.6.0
- appel middleware session avec auth/key/age

v0.5.0
- catcher avec werr

v0.4.0
- gorilla session
- ajout Options
- supprime sql where et tx

v0.2.1
