@@ -1,3 +1,6 @@
+
+- Options avec OptionAttrs
+
 v0.9.0
 - Static Middleware
 
